--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
   padding: 20px;
 }
 
+a {
+  color: #f1d7a1;
+  text-decoration: underline;
+}
+
 .container {
   max-width: 700px;
   width: 100%;
@@ -70,11 +75,6 @@ th {
   font-size: 16px;
   margin-top: 30px;
   text-align: center;
-}
-
-.footer a {
-  color: #f1d7a1;
-  text-decoration: underline;
 }
 
 @media (max-width: 600px) {
